--- a/web/static/package.json
+++ b/web/static/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-coffee": "^0.11.1",
+    "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1"
   }
