--- a/api/Dockerfile/template/Dockerfile.template.ubuntu1404
+++ b/api/Dockerfile/template/Dockerfile.template.ubuntu1404
@@ -22,7 +22,7 @@ RUN echo '${USERNAME} ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers && \
     echo '${USERNAME}:${USERNAME}' | chpasswd
 RUN chown -R ${USERNAME}:${USERNAME} /home/${USERNAME}/
 
-EXPOSE 22 ${PORTS}
+EXPOSE ${PORTS}
 CMD ['/sbin/my_init']
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 RUN echo '${BUILD_TIME}'
